<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, tester!</string>
    <string name="app_name">privacyBot</string>
    <string name="pbt">\n\nPrivacyBot\n</string>
    <string name="installing">\n\nPlease wait while data is installed. This may take some time, but it will only happen this one time. \n\nThank you for your patience!</string>
	<string name="importing">\n\nPlease wait while your key is being imported!\n\n Using the following keyfile: \n</string>
	<string name="install_done">\n\n\n\n\nOkay, Done!\n\nPlease press back.</string>
	<string name="button_txt">Text Messages</string>
	<string name="button_email">Email</string>
	<string name="button_manage_keys">Key Management</string>
	<string name="blank"></string>
	<string name="button_my_key">My Keys</string>
	<string name="button_new_key">New Key</string>
	<string name="button_import_key">Import Key</string>
	<string name="please_wait">Please wait..</string>
	<string name="listing_keys">Listing keys..</string>
	<string name="button_send_my_key">Send My Key</string>
	<string name="button_send_text">Send Text</string>
	<string name="button_send_email">Send Email</string>
	<string name="button_send_pbt">Send PrivacyBot</string>
	<string name="button_send">Send</string>
	<string name="msg_hint">Please type your message</string>
	<string name="unlock_key">Unlock key</string>
	<string name="enter_pass">Please enter your password</string>
	<string name="ok">Ok</string>
	<string name="private_data_attached">Private data is attached.</string>
	<string name="decrypting">Decrypting..</string>
	<string name="to">\nTo:\t</string>				
	<string name="choose_msg_app">Choose your messaging app</string>
	<string name="choose_email_app">Choose your email app</string>
	<string name="sending">\n\n\n\nSending..</string>
	<string name="privacybot_attached">PrivacyBot for Android is attached</string>
	<string name="pubkey_attached">My OpenPGP/GPG public key is attached.</string>
	<string name="unable_to_copy">Unable to move application to SDCard.</string>
	<string name="shell_instructions">\n\n\n\n\n\nEnter your arguments. \n./gpgx --homedir=./.gpg -v is affixed to anything entered. \n\n\n</string>										
	<string name="dec_error">Decryption error.</string>
	<string name="bad_pass">Incorrect password!</string>
	
		<!-- ***************************
	     File Manager strings
	     *************************** -->
	
	    <string name="about_comments">OI File Manager is an open file manager that seamlessly cooperates with other applications.</string>  
	<string name="about_website_label">OI File Manager at OpenIntents</string> 
	
	<string name="menu_new_folder">New Folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="file_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>
    <string name="file_deleted">File deleted.</string>
    <string name="folder_deleted">Folder deleted.</string>
    <string name="file_renamed">File renamed.</string>
    <string name="folder_renamed">Folder renamed.</string>
    <string name="file_moved">File moved.</string>
    <string name="folder_moved">Folder moved.</string>
    <string name="file_copied">File copied.</string>
    <string name="move_title">Select folder to move to</string>
    <string name="move_button">Move here</string>
    <string name="copy_title">Select folder to copy to</string>
    <string name="copy_button">Copy here</string>
    
    <string name="copied_file_name">Copy of %s</string>
    <string name="copied_file_name_2">Copy %d of %s</string>
    
    <string name="error_creating_new_folder">Could not create new folder.</string>
    <string name="error_deleting_file">Could not delete file.</string>
    <string name="error_folder_not_empty">Folder is not empty.</string>
    <string name="error_renaming_file">Could not rename file.</string>
    <string name="error_renaming_folder">Could not rename folder.</string>
    <string name="error_moving_file">Could not move file.</string>
    <string name="error_moving_folder">Could not move folder.</string>
    <string name="error_copying_file">Could not copy file.</string>
    <string name="error_file_does_not_exists">File does not exist.</string>
    
    <string name="send_not_available">No application available for sending.</string>
    
    <string name="application_not_available">Application not available</string>
    
	<!-- EULA -->
	<string name="eula_title">OI File Manager EULA</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Cancel</string>
	
	<!-- Update -->
	<string name="update_box_text">Please check manually for updates or install OI Update
for automatic notifications.
Current version: %s
	</string>
	<string name="update_check_now">Check now.</string>
	<string name="update_get_updater">Get OI Updater.</string>
	<string name="update_error">Download application not available.</string>
	<string name="update">Check updates</string>
	
    <!-- About -->
    <string name="about">About</string>
	<string name="aboutapp_not_available">Version %s\n\nNo compatible extension available to display full info (contact, credits, license).</string>
    <string name="aboutapp_get">Get OI About</string>
	
</resources>
